manifests/prd/envoy-gateway/ReferenceGrant-public-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: public-ingress
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argocd
  to:
    - group: ""
      kind: Service
      name: envoy-gateway-apps
