manifests/prd/envoy-gateway/Deployment-envoy-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: envoy-gateway
      app.kubernetes.io/name: gateway-helm
      control-plane: envoy-gateway
  template:
    metadata:
      annotations:
        prometheus.io/port: "19001"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: envoy-gateway
        app.kubernetes.io/name: gateway-helm
        control-plane: envoy-gateway
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - server
            - --config-path=/config/envoy-gateway.yaml
          image: docker.io/envoyproxy/gateway:v1.9.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          name: envoy-gateway
          ports:
            - containerPort: 18000
              name: grpc
            - containerPort: 18001
              name: ratelimit
            - containerPort: 18002
              name: wasm
            - containerPort: 19001
              name: metrics
            - containerPort: 9443
              name: webhook
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: 8081
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: envoy-gateway-config
              readOnly: true
            - mountPath: /certs
              name: certs
              readOnly: true
            - mountPath: /var/lib/eg/wasm
              name: wasm-cache
      imagePullSecrets: []
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: envoy-gateway
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            defaultMode: 420
            name: envoy-gateway-config
          name: envoy-gateway-config
        - name: certs
          secret:
            secretName: envoy-gateway
        - emptyDir: {}
          name: wasm-cache
