manifests/prd/envoy-gateway/Gateway-apps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.kidibox.net'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: apps-tls
        mode: Terminate
    - allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
      hostname: kube.kidibox.net
      name: kube-api
      port: 6443
      protocol: TLS
      tls:
        mode: Passthrough
