manifests/prd/envoy-gateway/CiliumNetworkPolicy-envoy-gateway-certgen.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-certgen
  namespace: envoy-gateway-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app: certgen
