manifests/prd/envoy-gateway/CiliumNetworkPolicy-envoy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      control-plane: envoy-gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "18000"
              protocol: TCP
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
